# SmartApo

./: .dockerignore  .gitignore  .npmrc  CLAUDE.md  README.md  backend.Dockerfile.template  chat_flow_diagram.md  chatbot_garoon.js  chatbot_kintone.js  cors-config.json  frontend.Dockerfile.template  index.html  index_auth.html  onboard_unified.ps1  package-lock.json  package.json  readGoogle.md  redocly.yaml  request.json  run_db_ops.bat  run_db_ops.sh  turbo.json
.claude/: settings.local.json
python/: pyproject.toml
python/domain/based-template-svc/: README.md  alembic.ini  check_table_structure.py  dockerfile  pyproject.toml
python/domain/based-template-svc/docs/: chat_chunk_flow_diagram.md
python/domain/based-template-svc/migration/: env.py
python/domain/based-template-svc/scripts/: setup_bigquery.py
python/domain/based-template-svc/src/: README.md  __init__.py  app.py  main.py
python/domain/based-template-svc/src/auth/: dependency.py
python/domain/based-template-svc/src/auth/authentication/: basic_auth.py  dependencies.py  firebase_init.py
python/domain/based-template-svc/src/auth/authorization/: dependencies.py  ip_restriction.py  permission_map.py  roles.py  utils.py
python/domain/based-template-svc/src/common/: env_config.py  exceptions.py  log_config.py
python/domain/based-template-svc/src/common/external_user_manage/: __init__.py  external_chat_service.py  human_handoff_store.py  manager.py
python/domain/based-template-svc/src/common/limit/: dependencies.py  schemas.py  service.py
python/domain/based-template-svc/src/common/schemas/: base_schema.py  node_schema.py
python/domain/based-template-svc/src/database_utils/: database.py  db_DEV.py  db_migration_check.py  db_mock.py  db_ops.py  db_ops_er.py  db_ops_query.py  db_reset.py
python/domain/based-template-svc/src/models/tables/: __init__.py  declarative_base.py  enum.py  model_defs.py
python/domain/based-template-svc/src/routers/dialer/: __init__.py  calling_session.py  dialer_agents_router.py  dialer_call_lists_router.py  dialer_call_logs_router.py  dialer_callbacks_router.py  dialer_calls_router.py  dialer_campaigns_router.py  dialer_contacts_router.py  dialer_dashboard_router.py  dialer_dial_router.py  dialer_dispositions_router.py  dialer_dnc_router.py  dialer_google_router.py  dialer_scripts_router.py  dialer_settings_router.py  dialer_twilio_webhooks_router.py  dialer_users_router.py
python/domain/based-template-svc/src/routers/dialer/schemas/: agent_schemas.py  call_list_schemas.py  call_log_schemas.py  callback_schemas.py  campaign_schemas.py  common_schemas.py  contact_schemas.py  dashboard_schemas.py  disposition_schemas.py  dnc_schemas.py  google_schemas.py  script_schemas.py  settings_schemas.py  user_schemas.py
python/domain/based-template-svc/src/services/composites/prompt/: gemini_prompt.py  openai_prompt.py
python/domain/based-template-svc/src/services/implementations/: di.py  esl_client.py  freeswitch_event_handler.py  p_file_converter.py  p_file_validator.py  p_freeswitch_service.py  p_gcs_file_storage_client.py  p_gmail_service.py  p_google_calendar_service.py  p_google_contacts_service.py  p_google_sheets_service.py  p_openai.py  p_outlook_calendar_service.py  p_predictive_dialer_service.py  p_stripe.py  p_translation.py  p_twilio_service.py  p_web_search_azure_openai.py  password_generator.py  predictive_dial_loop.py
python/domain/based-template-svc/src/services/implementations/ai_platform/: __init__.py  claude.py  gemini.py  gemini_nanobanana.py  openai.py  perplexity.py
python/domain/based-template-svc/src/services/interfaces/: i_ai_service.py  i_audio.py  i_calendar_service.py  i_contact_sync_service.py  i_email_service.py  i_file_converter.py  i_file_storage_client.py  i_file_validator.py  i_ocr.py  i_predictive_dialer_service.py  i_sheets_service.py  i_stripe_service.py  i_telephony_service.py
(+287 files in other folders)
