[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies =[
    "pyyaml>=6.0.2",
        # Web Framework & Server
    "fastapi==0.115.11",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    # Database & Migration
    "sqlalchemy==2.0.39",
    "alembic==1.16.1",
    "pymysql==1.1.1",
    # Google Cloud & Firebase
    "firebase-admin==6.7.0",
    "google-cloud-aiplatform==1.85.0",
    "google-cloud-firestore==2.20.1",
    "google-cloud-secret-manager==2.23.2",
    "google-cloud-storage==2.19.0",
    "google-cloud-vision==3.10.1",
    # External APIs & SDKs
    "line-bot-sdk==3.16.2",
    "openai==1.68.0",
    "pydantic-ai",
    "anthropic>=0.34.0",
    "google-genai>=1.0.0",
    "google-generativeai>=0.8.0",#後で絶対に消す
    "pandas==2.2.3",
    "numpy==2.2.4",
    "openpyxl==3.1.5",
    "opencv-python==4.11.0.86",
    # PDF & Document Processing
    "beautifulsoup4==4.13.3", # bs4は実質これ
    "pdf2image==1.17.0",
    "pdfplumber==0.11.5",
    "pypdf==5.4.0",
    "pypdf2==3.0.1", # from PyPDF2 import PdfReader に対応
    "pycryptodome==3.21.0", # AES暗号化PDFの復号に必要
    "python-docx==1.1.2",
    "python-pptx==1.0.2", # from pptx import Presentation に対応
    "pypandoc==1.15", # chardetはこれの依存
    # Authentication & Security
    "bcrypt==4.3.0",
    "passlib==1.7.4",
    "python-jose==3.4.0",
    "pyjwt==2.10.1",
    # Utilities
    "pydantic-settings==2.8.1",
    "python-dotenv==1.0.1", # dotenvはこれの依存
    "redis==5.2.1",
    "pydub==0.25.1", # from pydub import AudioSegment に対応
    "aenum==3.1.15", # 汎用Enumライブラリ
    "chardet==5.2.0",
    "aiomysql>=0.2.0",
    "google-cloud-spanner>=3.47.0",
    "sqlalchemy-spanner>=1.0.0",
    "google-cloud-run>=0.11.0",
]

[tool.uv.workspace]
members = [
    "domain/based-template-svc",
    "core/c_ai_svc",
    "core/c_file_svc",
    "domain/miyakoya-svc",
    "domain/freeplay-svc",
    "domain/mitradata-svc",
    "job/ocr_job",
    "job/embedding_job",
    "domain/goda-kanko-shoji-svc",
    "domain/kitepro-svc",
     "domain/toshibatec-svc",
     "domain/vertex-p-svc",
     "domain/vertex-e-svc",
     "domain/doshisha-svc",
     "domain/imjp-svc",
     "domain/tp-prime-members-svc",
     "domain/adviser-ai-svc",
     "domain/astecpaints-svc",
]

[project.optional-dependencies]
dev = [
    "eralchemy==1.5.0",
    "graphviz==0.20.3",
    "ruff==0.11.1",
]

[tool.ruff]
# 除外するディレクトリ
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# 1行の最大文字数
line-length = 120
indent-width = 4

[tool.ruff.lint]
# チェックするエラーの種類
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

# 除外するエラーの種類
ignore = [
    "E501",  # line too long, handled by black
    "E712",  # comparison to False should be 'if cond is False:'
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904", # raise ... from ... になっていない場合のエラーを無視
]

# ファイルごとのエラー除外
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# isort の設定
[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.format]
quote-style = "double"  # 文字列には二重引用符を使用します。
indent-style = "space"  # タブではなくスペースでインデントします。
line-ending = "auto"  # ファイルの終端文字を自動で設定します。
